--- a/main.html
+++ b/main.html
@@ -8,7 +8,30 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <main>
+		<h1>Mathura</h1>
+		<p>Mathura has an ancient history and also homeland and birthplace of Krishna who was born in Yadu dynasty. 
+			According to the Archaeological Survey of India plaque at the Mathura Museum, the city is mentioned in the oldest Indian epic, the Ramayana.
+	</p>
+	  <h4>Attractions</h4>
+		<ol>
+<strong>
+<li>Shri Krishna Janmabhoomi Temple, Mathura</li>
+<li>Dwarkadhish Temple, Mathura</li>
+<li>Govardhan Hill</li>
+<li>Nandgaon</li>
+<li>Prem Mandir</li>
+</strong>
+		</ol>
+<h4>Foods-(Must Try)</h4>
+<ul> <em>
+	<li>Lassi</li>
+	<li>Pede</li>
+	<li>Makhan Mishri</li>
+	<li>Malpua</li></em>
+</ul>
+	</main>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
