--- a/main.html
+++ b/main.html
@@ -15,20 +15,20 @@
 	</p>
 	  <h4>Attractions</h4>
 		<ol>
-<strong>
-<li>Shri Krishna Janmabhoomi Temple, Mathura</li>
-<li>Dwarkadhish Temple, Mathura</li>
+<strong><em>
+	<li>Shri Krishna Janmabhoomi Temple, Mathura</li>
+<li>Dwarkadhish Temple,Mathura</li>
 <li>Govardhan Hill</li>
 <li>Nandgaon</li>
 <li>Prem Mandir</li>
-</strong>
+</em></strong>
 		</ol>
 <h4>Foods-(Must Try)</h4>
-<ul> <em>
+<ul><b><em>
 	<li>Lassi</li>
 	<li>Pede</li>
 	<li>Makhan Mishri</li>
-	<li>Malpua</li></em>
+	<li>Malpua</li></em></b>
 </ul>
 	</main>
 	<script type="text/javascript" src="./script.js">
