--- a/main.html
+++ b/main.html
@@ -24,11 +24,11 @@
 </em></strong>
 		</ol>
 <h4>Foods-(Must Try)</h4>
-<ul><b><em>
+<ul><b><i>
 	<li>Lassi</li>
 	<li>Pede</li>
 	<li>Makhan Mishri</li>
-	<li>Malpua</li></em></b>
+	<li>Malpua</li></i></b>
 </ul>
 	</main>
 	<script type="text/javascript" src="./script.js">
